--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js",
-    "postbuild": "mkdir -p ../web-gen ; rm -rf web-gen/* ; cp -r dist/* ../web-gen ; rm -rf dist"
+    "build": "node build/build.js"
   },
   "dependencies": {
     "vue": "^2.5.2",
